# gpt-rust

./: Cargo.toml  LICENSE  README.md
src/chap1/: chap1.md  exercise1.rs  exercise2.rs  exercise3.rs  exercise4.rs  exercise5.rs
src/chap2/: README.md
