[package]
name = "gpt-rustx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "exercise1-1"
path = "src/chap1/exercise1.rs"

[[bin]]
name = "exercise1-2"
path = "src/chap1/exercise2.rs"

[[bin]]
name = "exercise1-3"
path = "src/chap1/exercise3.rs"

[[bin]]
name = "exercise1-4"
path = "src/chap1/exercise4.rs"

[[bin]]
name = "exercise1-5"
path = "src/chap1/exercise5.rs"

[[bin]]
name = "exercise2-1"
path = "src/chap2/exercise1.rs"

[[bin]]
name = "exercise2-2"
path = "src/chap2/exercise2.rs"

[[bin]]
name = "exercise2-3"
path = "src/chap2/exercise3.rs"

[[bin]]
name = "exercise2-4"
path = "src/chap2/exercise4.rs"